<resources>
    <string name="app_name">Newsapi Client</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="add_some_details">Add some details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="finish">Finish</string>
    <string name="title_activity_holder">HolderActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_news">News</string>
    <string name="menu_sources">Sources</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_signout">Sign out</string>
    <string name="welcome_back">Welcome back</string>
    <string name="username">username</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="top_headlines">Top Headlines</string>
</resources>
